--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tarun Sharma",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
